inventory-service api is now accessible.

--- a/microservices-ecommerce-platform/inventory-service/src/resources/application.properties
+++ b/microservices-ecommerce-platform/inventory-service/src/resources/application.properties
@@ -2,3 +2,4 @@
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.profiles.active=dev
+logging.level.org.springframework=DEBUG
