--- a/microservices-ecommerce-platform/order-service/pom.xml
+++ b/microservices-ecommerce-platform/order-service/pom.xml
@@ -14,6 +14,11 @@
     <properties>
         <java.version>18</java.version> <!-- Ensure this matches your Java version -->
         <spring-boot.version>3.3.4</spring-boot.version> <!-- Set Spring Boot version -->
+        <DB_HOST>order_service_db</DB_HOST>
+        <DB_PORT>5432</DB_PORT>
+        <DB_NAME>order_service_db</DB_NAME>
+        <DB_USER>${env.POSTGRES_USER_ORDER_SERVICE}</DB_USER>
+        <DB_PASSWORD>${env.POSTGRES_PASSWORD_ORDER_SERVICE}</DB_PASSWORD>
     </properties>
 
     <parent>
@@ -57,6 +62,19 @@
             <version>0.9.1</version>
         </dependency>
 
+        <!--
+        Liquibase is used for database versioning and migrations.
+        This allows us to manage changes to the database schema in a controlled, consistent,
+        and versioned way across all environments.
+        -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.29.2</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
@@ -65,6 +83,20 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!-- Liquibase Maven Plugin for database migrations -->
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.29.2</version>
+                <configuration>
+                    <changeLogFile>src/main/resources/db/changelog/db.changelog-master.yml</changeLogFile>
+                    <url>jdbc:postgresql://localhost:5433/inventory_service_db</url>
+                    <username>${DB_USER}</username>
+                    <password>${DB_PASSWORD}</password>
+                    <driver>org.postgresql.Driver</driver>
+                </configuration>
             </plugin>
         </plugins>
     </build>
