--- a/microservices-ecommerce-platform/inventory-service/src/main/resources/application.properties
+++ b/microservices-ecommerce-platform/inventory-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.profiles.active=dev
 logging.level.org.springframework=DEBUG
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yml
