--- a/microservices-ecommerce-platform/user-service/src/main/resources/liquibase.properties
+++ b/microservices-ecommerce-platform/user-service/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 # Liquibase configuration for User Service
-changeLogFile= classpath:db/changelog/db.changelog-master.xml
+changeLogFile= classpath:src/main/resources/db/changelog/db.changelog-master.yml
 url= jdbc:postgresql://localhost:5432/user_service_db
 username= ${POSTGRES_USER_USER_SERVICE}
 password= ${POSTGRES_PASSWORD_USER_SERVICE}
