--- a/microservices-ecommerce-platform/payment-service/src/main/resources/liquibase.properties
+++ b/microservices-ecommerce-platform/payment-service/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile= classpath: db/changelog/db.changelog-master.xml
+changeLogFile= classpath: src/main/resources/db/changelog/db.changelog-master.yml
 url: jdbc:postgresql://localhost:5435/payment_service_db
 username: payment_service
 password: 1qaz8uhb!QAZ*UHB
